--- a/TenMovies/appsettings.json
+++ b/TenMovies/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-EE10MPJ\\MSSQL15.MSSQLSERVER;Database=Movies;Integrated Security=SSPI;TrustServerCertificate=true"
+  }
 }
