--- a/TenMovies/appsettings.json
+++ b/TenMovies/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-EE10MPJ\\MSSQL15.MSSQLSERVER;Database=Movies;Integrated Security=SSPI;TrustServerCertificate=true"
+    "DefaultConnection": "Server=DESKTOP-EE10MPJ\\MSSQLSERVER;Database=Movies;Integrated Security=SSPI;TrustServerCertificate=true"
   }
 }
