#task 4 Добавил информацию о фильмах

--- a/TenMovies/appsettings.json
+++ b/TenMovies/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-EE10MPJ\\MSSQLSERVER;Database=Movies;Integrated Security=SSPI;TrustServerCertificate=true"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=Movies;Integrated Security=True;TrustServerCertificate=true"
   }
 }
